# src/api/team/index.ts
@@ -6,6 +6,7 @@ const router = Router();
 router.get('/', controller.getTeams);
 router.post('/', verifyJWT, isSportsHead, controller.addTeam);
 router.get('/:id', controller.getTeam);
+router.get('/:id/players', controller.getPlayers);
 router.post('/player', verifyJWT, isSportsHead, controller.addPlayer);
 
 // export default router;
